Fix list styles in the editor
Otherwise the Posts List and Actions List blocks look off

--- a/assets/src/scss/editorOverrides.scss
+++ b/assets/src/scss/editorOverrides.scss
@@ -130,8 +130,8 @@
     }
   }
 
-  ul li a,
-  ol li a {
+  > ul li a,
+  > ol li a {
     @include shared-link-styles;
   }
 }
